@@ -1,21 +1,25 @@
 package com.matkon.gamelog.services;
 
-import com.matkon.gamelog.data.tvseries.EpisodeDto;
-import com.matkon.gamelog.data.tvseries.MyStatus;
 import com.matkon.gamelog.data.tvseries.Season;
-import com.matkon.gamelog.data.tvseries.SeasonProgressDto;
 import com.matkon.gamelog.data.tvseries.TVSeries;
+import com.matkon.gamelog.data.tvseries.TVSeriesDto;
+import com.matkon.gamelog.data.tvseries.TVSeriesListDto;
 import com.matkon.gamelog.data.tvseries.TVSeriesSearchDto;
-import com.matkon.gamelog.data.tvseries.TVSeriesWithProgressDto;
+import com.matkon.gamelog.data.tvseries.TrackingType;
 import com.matkon.gamelog.repos.SeasonRepository;
 import com.matkon.gamelog.repos.TVSeriesRepository;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.reactive.function.client.WebClient;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
+
+import static org.springframework.http.HttpStatus.NOT_FOUND;
 
 @Service
 public class TVSeriesService
@@ -37,7 +41,7 @@ public class TVSeriesService
     }
 
     // ---- Search ----
-    public List<TVSeriesSearchDto> searchTVSeries(String query, String lang, int page)
+    public List<TVSeriesSearchDto> searchByQuery(String query, String lang, int page)
     {
         TMDBSearchResponse response = webClient.get()
                 .uri(uriBuilder -> uriBuilder
@@ -54,94 +58,107 @@ public class TVSeriesService
         if (response == null || response.results == null) return List.of();
 
         return response.results.stream()
-                .map(r -> new TVSeriesSearchDto(r.id, r.name, parseDate(r.first_air_date)))
-                .collect(Collectors.toList());
+                .map(r -> new TVSeriesSearchDto(r.id, r.name, parseDate(r.first_air_date), r.poster_path))
+                .toList();
     }
 
-    // ---- Add minimal series ----
-    public void addSeriesByTmdbId(Long tmdbId, MyStatus status)
+    // ---- Add series ----
+    @Transactional
+    public void saveSeries(Long tmdbId, TrackingType trackingType)
     {
-        seriesRepo.findByTmdbId(tmdbId)
-                .orElseGet(() -> {
-                    TMDBSeriesDetails details = webClient.get()
-                            .uri(uriBuilder -> uriBuilder
-                                    .path("/tv/{id}")
-                                    .queryParam("api_key", tmdbApiKey)
-                                    .queryParam("language", "en-US")
-                                    .build(tmdbId))
-                            .retrieve()
-                            .bodyToMono(TMDBSeriesDetails.class)
-                            .block();
+        Optional<TVSeries> existing = seriesRepo.findByTmdbId(tmdbId);
+        if (existing.isPresent()) return;
 
-                    TVSeries tvSeries = new TVSeries();
-                    tvSeries.setTmdbId(details.id);
-                    tvSeries.setName(details.name);
-                    tvSeries.setMyStatus(status);
-
-                    // Load seasons with total episode count
-                    details.seasons.forEach(s -> {
-                        Season season = new Season();
-                        season.setTmdbId(s.id);
-                        season.setName(s.name);
-                        season.setSeasonNumber(s.season_number);
-                        season.setTotalEpisodes(s.episode_count);
-                        season.setWatchedCount(0);
-                        tvSeries.addSeason(season);
-                    });
-
-                    seriesRepo.save(tvSeries);
-                    return tvSeries;
-                });
-    }
-
-    // ---- Progress ----
-    public SeasonProgressDto getSeasonProgress(Long seriesId, Long seasonId)
-    {
-        TVSeries series = seriesRepo.findById(seriesId)
-                .orElseThrow(() -> new RuntimeException("Series not found"));
-        Season season = seasonRepo.findById(seasonId)
-                .orElseThrow(() -> new RuntimeException("Season not found"));
-
-        TMDBSeasonDetails seasonDetails = webClient.get()
+        TMDBSeries details = webClient.get()
                 .uri(uriBuilder -> uriBuilder
-                        .path("/tv/{id}/season/{num}")
+                        .path("/tv/{id}")
                         .queryParam("api_key", tmdbApiKey)
-                        .build(series.getTmdbId(), season.getSeasonNumber()))
+                        .queryParam("language", "en-US")
+                        .build(tmdbId))
                 .retrieve()
-                .bodyToMono(TMDBSeasonDetails.class)
+                .bodyToMono(TMDBSeries.class)
                 .block();
 
-        EpisodeDto lastWatched = null;
-        EpisodeDto nextToWatch = null;
-
-        if (season.getWatchedCount() > 0) {
-            TMDBEpisode lastEp = seasonDetails.episodes.get(season.getWatchedCount() - 1);
-            lastWatched = new EpisodeDto(lastEp.episode_number, lastEp.name, lastEp.air_date);
-        }
-        if (season.getWatchedCount() < season.getTotalEpisodes()) {
-            TMDBEpisode nextEp = seasonDetails.episodes.get(season.getWatchedCount());
-            nextToWatch = new EpisodeDto(nextEp.episode_number, nextEp.name, nextEp.air_date);
+        if (details == null) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Series not found in TMDB API");
         }
 
-        double percentage = 0.0;
-        if (season.getTotalEpisodes() > 0) {
-            percentage = (season.getWatchedCount() * 100.0) / season.getTotalEpisodes();
-        }
+        TVSeries tvSeries = new TVSeries();
+        tvSeries.setTmdbId(details.id);
+        tvSeries.setName(details.name);
+        tvSeries.setFirst_air_date(details.first_air_date);
+        tvSeries.setIn_production(details.in_production);
+        tvSeries.setNumber_of_episodes(details.number_of_episodes);
+        tvSeries.setNumber_of_seasons(details.number_of_seasons);
+        tvSeries.setPoster_path(details.poster_path);
+        tvSeries.setLast_air_date(details.last_air_date);
+        tvSeries.setStatus(details.status);
+        tvSeries.setTrackingType(trackingType);
 
+        details.seasons.forEach(s -> {
+            Season season = new Season();
+            season.setName(s.name);
+            season.setSeason_number(s.season_number);
+            season.setAir_date(s.air_date);
+            season.setEpisode_count(s.episode_count);
+            season.setWatchedCount(0);
+            tvSeries.addSeason(season);
+        });
 
-        return new SeasonProgressDto(
-                season.getId(),
-                season.getTmdbId(),
-                season.getSeasonNumber(),
-                season.getName(),
-                season.getTotalEpisodes(),
-                season.getWatchedCount(),
-                lastWatched,
-                nextToWatch,
-                percentage
-        );
+        seriesRepo.save(tvSeries);
     }
 
+    // ---- Update season counts ----
+    @Transactional
+    public void incrementWatchedCount(Long seasonId)
+    {
+        Season season = seasonRepo.findById(seasonId)
+                .orElseThrow(() -> new ResponseStatusException(NOT_FOUND, "Season not found"));
+
+        if (season.getWatchedCount() < season.getEpisode_count()) {
+            season.setWatchedCount(season.getWatchedCount() + 1);
+            seasonRepo.save(season);
+        }
+    }
+
+    @Transactional
+    public void updateWatchedCount(Long seasonId, int watchedCount)
+    {
+        Season season = seasonRepo.findById(seasonId)
+                .orElseThrow(() -> new ResponseStatusException(NOT_FOUND, "Season not found"));
+
+        if (watchedCount >= 0 && watchedCount <= season.getEpisode_count()) {
+            season.setWatchedCount(watchedCount);
+            seasonRepo.save(season);
+        }
+    }
+
+    // ---- Get all series ----
+    public List<TVSeriesListDto> getAllSeries()
+    {
+        return seriesRepo.findAll().stream().map(TVSeriesListDto::fromEntity).toList();
+    }
+
+    // ---- Get series by id ----
+    public TVSeriesDto getSeriesById(Long id)
+    {
+        Optional<TVSeries> seriesOpt = seriesRepo.findById(id);
+        TVSeries series = seriesOpt.orElseThrow(() ->
+                new ResponseStatusException(HttpStatus.NOT_FOUND, "TV series not found"));
+        return TVSeriesDto.fromEntity(series);
+    }
+
+    // ---- Update trackingType ----
+    @Transactional
+    public void updateTrackingType(Long seriesId, TrackingType trackingType)
+    {
+        TVSeries series = seriesRepo.findById(seriesId)
+                .orElseThrow(() -> new ResponseStatusException(NOT_FOUND, "TV series not found"));
+        series.setTrackingType(trackingType);
+        seriesRepo.save(series);
+    }
+
+    // ---- Utility Mappers ----
     private LocalDate parseDate(String date)
     {
         return (date != null && !date.isEmpty()) ? LocalDate.parse(date) : null;
@@ -157,114 +174,29 @@ public class TVSeriesService
     {
         public Long id;
         public String name;
+        public String poster_path;
         public String first_air_date;
     }
 
-    private static class TMDBSeriesDetails
+    private static class TMDBSeries
     {
         public Long id;
         public String name;
-        public List<TMDBSeasonMeta> seasons;
+        public String poster_path;
+        public List<TMDBSeason> seasons;
+        public String status;
+        public LocalDate first_air_date;
+        public boolean in_production;
+        public int number_of_episodes;
+        public int number_of_seasons;
+        public LocalDate last_air_date;
     }
 
-    private static class TMDBSeasonMeta
+    private static class TMDBSeason
     {
-        public Long id;
         public String name;
         public int season_number;
+        public LocalDate air_date;
         public int episode_count;
-    }
-
-    private static class TMDBSeasonDetails
-    {
-        public List<TMDBEpisode> episodes;
-    }
-
-    private static class TMDBEpisode
-    {
-        public int episode_number;
-        public String name;
-        public String air_date;
-    }
-
-    public void incrementWatchedCount(Long seasonId)
-    {
-        Season season = seasonRepo.findById(seasonId)
-                .orElseThrow(() -> new RuntimeException("Season not found"));
-
-        if (season.getWatchedCount() < season.getTotalEpisodes()) {
-            season.setWatchedCount(season.getWatchedCount() + 1);
-            seasonRepo.save(season);
-        }
-    }
-
-    public void updateWatchedCount(Long seasonId, int watchedCount)
-    {
-        Season season = seasonRepo.findById(seasonId)
-                .orElseThrow(() -> new RuntimeException("Season not found"));
-
-        if (watchedCount >= 0 && watchedCount <= season.getTotalEpisodes()) {
-            season.setWatchedCount(watchedCount);
-            seasonRepo.save(season);
-        }
-    }
-
-    public List<TVSeriesWithProgressDto> getAllSeriesWithProgress()
-    {
-        List<TVSeries> seriesList = seriesRepo.findAll();
-        return seriesList.stream()
-                .map(series -> {
-                    List<SeasonProgressDto> seasonProgressList = series.getSeasons().stream()
-                            .map(season -> buildSeasonProgress(series.getTmdbId(), season))
-                            .toList();
-                    return new TVSeriesWithProgressDto(
-                            series.getId(),
-                            series.getTmdbId(),
-                            series.getName(),
-                            series.getMyStatus(),
-                            seasonProgressList
-                    );
-                })
-                .toList();
-    }
-
-    private SeasonProgressDto buildSeasonProgress(Long seriesTmdbId, Season season)
-    {
-        TMDBSeasonDetails seasonDetails = webClient.get()
-                .uri(uriBuilder -> uriBuilder
-                        .path("/tv/{id}/season/{num}")
-                        .queryParam("api_key", tmdbApiKey)
-                        .build(seriesTmdbId, season.getSeasonNumber()))
-                .retrieve()
-                .bodyToMono(TMDBSeasonDetails.class)
-                .block();
-
-        EpisodeDto lastWatched = null;
-        EpisodeDto nextToWatch = null;
-        if (season.getWatchedCount() > 0 && season.getWatchedCount() <= seasonDetails.episodes.size()) {
-            TMDBEpisode lastEp = seasonDetails.episodes.get(season.getWatchedCount() - 1);
-            lastWatched = new EpisodeDto(lastEp.episode_number, lastEp.name, lastEp.air_date);
-        }
-        if (season.getWatchedCount() < season.getTotalEpisodes()) {
-            TMDBEpisode nextEp = seasonDetails.episodes.get(season.getWatchedCount());
-            nextToWatch = new EpisodeDto(nextEp.episode_number, nextEp.name, nextEp.air_date);
-        }
-
-        double perc = 0.0;
-        if (season.getTotalEpisodes() > 0) {
-            perc = (season.getWatchedCount() * 100.0) / season.getTotalEpisodes();
-        }
-
-        return new SeasonProgressDto(
-                season.getId(),
-                season.getTmdbId(),
-                season.getSeasonNumber(),
-                season.getName(),
-                season.getTotalEpisodes(),
-                season.getWatchedCount(),
-                lastWatched,
-                nextToWatch,
-                perc
-        );
     }
 }
